--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
+title:       Blog
+email:       nnmmaa00@naver.com
+author:      Kim Jae Run
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
-baseurl:     ""
-url:         "http://pixyll.com"
+baseurl:     "http://euneee.github.io"
+url:         "http://euneee.github.io"
 date_format: "%b %-d, %Y"
 header_pages:
  - about.md
