--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title:       Blog
 email:       nnmmaa00@naver.com
-author:      Kim Jae Run
+author:      Kim Jae Eun
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
 baseurl:     ""
 url:         "http://euneee.github.io"
