--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       Blog
+title:       eun's Blog
 email:       nnmmaa00@naver.com
 author:      Kim Jae Eun
 description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
